--- a/Loongdream.WebSite/Views/_ViewImports.cshtml
+++ b/Loongdream.WebSite/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using ASPNET_Core_1_0
-@using ASPNET_Core_1_0.Models
-@using ASPNET_Core_1_0.Models.AccountViewModels
-@using ASPNET_Core_1_0.Models.ManageViewModels
+﻿@using Loongdream.WebSite
+@using Loongdream.WebSite.Models
+@using Loongdream.WebSite.Models.AccountViewModels
+@using Loongdream.WebSite.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
